src/objects/fflbx__ReceiptLineItem__c.object
<CustomObject>
    <customHelpPage>fflbx__receipthelp</customHelpPage>
    <fields>
        <fullName>fflbx__AccountReference__c</fullName>
        <label>Account Reference</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AR Cash Transaction Line Items</relationshipLabel>
        <relationshipName>ReceiptLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__AvailableAmount__c</fullName>
        <label>Available Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__AvailableDiscountAmount__c</fullName>
        <label>Available Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__AvailableWriteOffAmount__c</fullName>
        <label>Available Write-Off Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__BankChargesAmount__c</fullName>
        <label>Bank Charges Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__CSVLineNumber__c</fullName>
        <label>CSV Line Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__CashEntryLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Entry Line Item</label>
        <referenceTo>c2g__codaCashEntryLineItem__c</referenceTo>
        <relationshipLabel>AR Cash Transaction Line Items</relationshipLabel>
        <relationshipName>ReceiptLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__CashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Entry</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipLabel>AR Cash Transaction Line Items</relationshipLabel>
        <relationshipName>ReceiptLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__CreditDate__c</fullName>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fflbx__DiscountAmount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__DocumentAmount__c</fullName>
        <label>Document Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__DocumentNumberCRN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Number (CRN)</label>
        <referenceTo>c2g__codaCreditNote__c</referenceTo>
        <relationshipLabel>AR Cash Transaction Line Items</relationshipLabel>
        <relationshipName>ReceiptLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__DocumentNumberSIN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Number (SIN)</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>AR Cash Transaction Line Items</relationshipLabel>
        <relationshipName>ReceiptLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__DocumentReference__c</fullName>
        <label>Document Reference</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__DocumentType__c</fullName>
        <formula>IF(CONTAINS(fflbx__DocumentReference__c, &apos;SIN&apos;), &apos;Invoice&apos;, 
     IF(CONTAINS(fflbx__DocumentReference__c, &apos;SCR&apos;), &apos;Credit Note&apos;, 
          If(fflbx__Amount__c &gt;= 0, &apos;Receipt&apos;, &apos;Refund&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__HasReference__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Has Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fflbx__LockboxNumber__c</fullName>
        <label>Bank Lockbox Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__Receipt__c</fullName>
        <label>AR Cash Transaction</label>
        <referenceTo>fflbx__Receipt__c</referenceTo>
        <relationshipLabel>AR Cash Transaction Line Items</relationshipLabel>
        <relationshipName>ReceiptLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fflbx__Reference__c</fullName>
        <label>Check Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__Remitter__c</fullName>
        <label>Remitter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Imported</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cash Entry Error</fullName>
                </value>
                <value>
                    <fullName>Cash Matching Error</fullName>
                </value>
                <value>
                    <fullName>Part Matched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fflbx__TransactionLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item</label>
        <referenceTo>c2g__codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>AR Cash Transaction Line Items</relationshipLabel>
        <relationshipName>ReceiptLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__Type__c</fullName>
        <label>Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__WriteOffAmount__c</fullName>
        <label>Write-Off Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>AR Cash Transaction Line Item</label>
    <listViews>
        <fullName>fflbx__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RLI-{0000}</displayFormat>
        <label>Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Cash Transaction Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>